<resources>
    <string name="app_name">Vynils</string>
    <string name="nav_home">Inicio</string>
    <string name="nav_albums">Álbumes</string>
    <string name="nav_artists">Artistas</string>
    <string name="nav_collectors">Coleccionistas</string>

    <string name="title_vinilos">Vinilos</string>
    <string name="title_albums">Álbumes</string>
    <string name="title_artists">Artistas</string>
    <string name="title_collectors">Coleccionistas</string>

    <string name="desc_back">Atrás</string>
    <string name="desc_menu">Menú</string>
    <string name="desc_home">Inicio</string>
    <string name="desc_filter">Filtrar</string>

    <string name="filter_title_albums">Filtrar Álbumes</string>
    <string name="filter_title_artists">Filtrar Artistas</string>
    <string name="filter_title_collectors">Filtrar Coleccionistas</string>
    <string name="filter_label_album_name">Nombre del álbum</string>
    <string name="filter_label_artist_name">Nombre del artista</string>
...
